# datasette-ephemeral-tables

./: README.md  pyproject.toml  setup.py
datasette_demo_database/: __init__.py
datasette_ephemeral_tables/: __init__.py
tests/: test_demo_database.py  test_ephemeral_tables.py
